// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'long enough (1) - single line with no…' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div
      className={\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque\`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'long enough (2) - single line with sp…' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div
      className={\` lorem ipsum dolor sit amet consectetur adipiscing elit
        proin ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque \`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'long enough (3) - multiple lines' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div
      className={\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque\`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'near boundary (1) - single line with …' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div
      className={
        "lorem ipsum dolor sit amet consectetur adipiscing elit proin"
      }
    >
      {children}
    </div>
  );
}
"
`;

exports[`'near boundary (2) - single line with …' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div
      className={\` lorem ipsum dolor sit amet consectetur adipiscing elit
        proin \`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'near boundary (3) - multiple lines' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div
      className={
        "lorem ipsum dolor sit amet consectetur adipiscing elit proin"
      }
    >
      {children}
    </div>
  );
}
"
`;

exports[`'short enough (1) - single line with n…' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div className={"lorem ipsum dolor sit amet"}>
      {children}
    </div>
  );
}
"
`;

exports[`'short enough (2) - single line with s…' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div className={" lorem ipsum dolor sit amet "}>
      {children}
    </div>
  );
}
"
`;

exports[`'short enough (3) - multiple lines' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div className={"lorem ipsum dolor sit amet"}>
      {children}
    </div>
  );
}
"
`;

exports[`'syntax variants - addition operation …' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <div className={" lorem ipsum " + " dolor sit amet "}>
      {children}
    </div>
  );
}
"
`;

exports[`'syntax variants - component' > expectation 1`] = `
"export function Foo({ children }) {
  return (
    <Box
      className={\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`}
    >
      {children}
    </Box>
  );
}
"
`;
